--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_pokemon_list">PokemonListActivity</string>
     <string name="title_activity_pokemon_detail_view">PokemonDetailView</string>
+    <string name="selected_item_num">ItemNumber</string>
 
 </resources>
